force-app/main/default/objects/ROI__c/ROI__c.object-meta.xml
<CustomObject>
    <label>ROI</label>
    <nameField>
        <label>ROI</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ROI</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>