force-app/main/default/objects/ROI__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ROI</relationshipLabel>
    <relationshipName>ROI</relationshipName>
    <type>Lookup</type>
</CustomField>