force-app/main/default/objects/ROI__c/fields/Fund__c.field-meta.xml
<CustomField>
    <fullName>Fund__c</fullName>
    <inlineHelpText>Fund againts which the ROI and other related details is updated</inlineHelpText>
    <label>Fund</label>
    <referenceTo>Fund__c</referenceTo>
    <relationshipLabel>ROI</relationshipLabel>
    <relationshipName>ROI</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>