force-app/main/default/objects/ROI__c/fields/PAmt__c.field-meta.xml
<CustomField>
    <fullName>PAmt__c</fullName>
    <inlineHelpText>Profit Amount of the fund.</inlineHelpText>
    <label>Profit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>